--- a/src/containers/OutlayDetails/OutlayDetails.css
+++ b/src/containers/OutlayDetails/OutlayDetails.css
@@ -2,6 +2,10 @@
   padding: 0 2rem;
 }
 
+.indicatorsList {
+  padding-top: 40px;
+}
+
 @media (min-width: 500px) {
   .outlayContainer {
     width: 500px;
