--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,3 +1,9 @@
 .containerBlock {
   margin: 0 auto;
 }
+.paper {
+  margin: auto;
+  max-width: 500px;
+  margin-top: 40px;
+  box-shadow: none !important;
+}
