--- a/src/containers/IndicatorsInsert/IndicatorsInsert.css
+++ b/src/containers/IndicatorsInsert/IndicatorsInsert.css
@@ -9,14 +9,22 @@
   margin-bottom: 1rem;
 }
 
-.indicatorsList dd, dt{
+.indicatorsList dd, dt {
   display: inline-block;
 }
 
-.indicatorsList dd{
+.indicatorsList dd {
   margin-inline-start: 1rem;
 }
 
 .headerMargin {
   margin-top: 10px !important;
+}
+
+.card {
+  margin: 20px 0;
+}
+
+.cardPadding {
+  padding: 16px !important;
 }
