--- a/src/containers/AuthForm/AuthForm.css
+++ b/src/containers/AuthForm/AuthForm.css
@@ -31,11 +31,8 @@
 .authHeader {
   display: flex;
   padding: 0;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px 0 !important;
   font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 18px;
   justify-content: center;
 }
 
