--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -2,9 +2,9 @@
   margin: 0 auto;
 }
 .paper {
-  margin: auto;
   max-width: 500px;
-  margin-top: 40px;
   box-shadow: none !important;
-  padding: 0 2rem;
+  margin-top: 40px;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
